# makemake-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install
examples/rule110/: README.md
examples/rule110/result/: 110.txt
examples/rule110/template/: 110.txt  makemake.json  rule.txt
functional_tests/: test.sh
functional_tests/call/: expected  test.sh
functional_tests/call/template/: file  file2  makemake.json
functional_tests/equals/: expected  test.sh
functional_tests/equals/template/: file
functional_tests/null-check/: expected
functional_tests/null-check/template/: file  makemake.json
functional_tests/parenthesis/: expected  test.sh
functional_tests/parenthesis/template/: makemake.json
functional_tests/rule110/: README.md  test.sh
functional_tests/rule110/template/: file  makemake.json
functional_tests/test_parenthesis/template/: file
package/: .SRCINFO  PKGBUILD
src/: args.rs  ast.rs  char_rw.rs  commander.rs  config.rs  err.rs  lexer.rs  main.rs  maker.rs  parser.rs  writer.rs
useful_stuff/: makemakeup.sh
useful_stuff/json-schema/: makemake-schema.json
useful_stuff/man-page/: makemake.7
