[package]
name = "makemake"
version = "2.0.0"
edition = "2021"
license-file = "LICENSE"
description = "Create and load folder templates."
homepage = "https://github.com/BonnyAD9/makemake-rs"
repository = "https://github.com/BonnyAD9/makemake-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
result = "1.0.0"
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
termal = "1.0.1"
thiserror = "1.0.56"
utf8-chars = "3.0.1"
