[package]
name = "makemake"
version = "2.2.0"
edition = "2021"
license-file = "LICENSE"
description = "Create and load folder templates."
homepage = "https://github.com/BonnyAD9/makemake-rs"
repository = "https://github.com/BonnyAD9/makemake-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
pareg = "0.3.0"
result = "1.0.0"
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
shell-words = "1.1.0"
termal = "1.0.1"
thiserror = "1.0.58"
utf8-chars = "3.0.1"
