[package]
name = "makemake"
version = "2.2.0"
edition = "2021"
license-file = "LICENSE"
description = "Create and load folder templates."
homepage = "https://github.com/BonnyAD9/makemake-rs"
repository = "https://github.com/BonnyAD9/makemake-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "6.0.0"
pareg = "0.7.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
shell-words = "1.1.0"
termal = "2.0.0"
thiserror = "2.0.11"
utf8-chars = "3.0.5"
